# wechat_work

./: README.md  pyproject.toml
wechat_work/: api.py  hooks.py  modules.txt  test.py  utils.py
wechat_work/transtlations/: zh.csv
wechat_work/wechat_work/doctype/wechat_agent/: test_wechat_agent.py  wechat_agent.js  wechat_agent.json  wechat_agent.py
wechat_work/wechat_work/doctype/wechat_corp/: test_wechat_corp.py  wechat_corp.js  wechat_corp.json  wechat_corp.py
wechat_work/wechat_work/doctype/wechat_message_type/: test_wechat_message_type.py  wechat_message_type.js  wechat_message_type.json  wechat_message_type.py
wechat_work/wechat_work/doctype/wechat_send_test/: test_wechat_send_test.py  wechat_send_test.js  wechat_send_test.json  wechat_send_test.py
